--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Reveal-PikeStreet",
+  "name": "tricks-of-the-software-trade",
   "version": "0.1.0",
-  "description": "Pike Street Theme for Reveal.js",
+  "description": "tricks-of-the-software-trade",
   "scripts": {
     "test": "grunt test",
     "start": ""
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/jpoon/Reveal-PikeStreet"
+    "url": "git://github.com/jpoon/tricks-of-the-software-trade"
   },
   "engines": {
     "node": "~0.10.0"
@@ -39,7 +39,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/jpoon/Reveal-PikeStreet/blob/master/LICENSE"
+      "url": "https://github.com/jpoon/tricks-of-the-software-trade/blob/master/LICENSE"
     }
   ]
 }
